--- a/views/panel.pug
+++ b/views/panel.pug
@@ -36,10 +36,103 @@ block content
       input(id="priceInTariff2021" type="text" placeholder="np. 280" value=data[0].tariff.price2021)
     div(class="when-option-2019")
       label(for="priceInTariff2020") Cena w cenniku na 2020: 
-      input(id="priceInTariff2020" type="text" placeholder="np. 274" value=data[0].tariff.price2020)     
-    div
+      input(id="priceInTariff2020" type="text" placeholder="np. 274" value=data[0].tariff.price2020)   
+    .extra-tariff-wrapper
+      p(class="tariff-wrapper-title-main") C12a 
+      .wrap-all-in-tariff
+        .year2022-wrapper 
+          p(class="tariff-wrapper-title") 2022 r. 
+          div
+            label Średnia 
+            input(id="priceC12a2022Avr" type="text" placeholder="np. 300" value=data[1].tariff.price2022.avr)
+          div
+            label I strefa 
+            input(id="priceC12a2022First" type="text" placeholder="np. 300" value=data[1].tariff.price2022.first)
+          div
+            label II strefa
+            input(id="priceC12a2022Second" type="text" placeholder="np. 300" value=data[1].tariff.price2022.second)
+        .year2021-wrapper 
+          p(class="tariff-wrapper-title") 2021 r.
+          div
+            label Średnia 
+            input(id="priceC12a2021Avr" type="text" placeholder="np. 300" value=data[1].tariff.price2021.avr)
+          div
+            label I strefa 
+            input(id="priceC12a2021First" type="text" placeholder="np. 300" value=data[1].tariff.price2021.first)
+          div
+            label II strefa
+            input(id="priceC12a2021Second" type="text" placeholder="np. 300" value=data[1].tariff.price2021.second)
+        .year2020-wrapper 
+          p(class="tariff-wrapper-title") 2020 r.
+          div
+            label Średnia 
+            input(id="priceC12a2020Avr" type="text" placeholder="np. 300" value=data[1].tariff.price2022.avr)
+          div
+            label I strefa 
+            input(id="priceC12a2020First" type="text" placeholder="np. 300" value=data[1].tariff.price2022.first)
+          div
+            label II strefa
+            input(id="priceC12a2020Second" type="text" placeholder="np. 300" value=data[1].tariff.price2022.second)
+    .extra-tariff-wrapper
+      p(class="tariff-wrapper-title-main") C12b 
+      .wrap-all-in-tariff
+        .year2022-wrapper 
+          p(class="tariff-wrapper-title") 2022 r. 
+          div
+            label Średnia 
+            input(id="priceC12b2022Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2022.avr)
+          div
+            label I strefa 
+            input(id="priceC12b2022First" type="text" placeholder="np. 300" value=data[2].tariff.price2022.first)
+          div
+            label II strefa
+            input(id="priceC12b2022Second" type="text" placeholder="np. 300" value=data[2].tariff.price2022.second)
+        .year2021-wrapper 
+          p(class="tariff-wrapper-title") 2021 r.
+          div
+            label Średnia 
+            input(id="priceC12b2021Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2021.avr)
+          div
+            label I strefa 
+            input(id="priceC12b2021First" type="text" placeholder="np. 300" value=data[2].tariff.price2021.first)
+          div
+            label II strefa
+            input(id="priceC12b2021Second" type="text" placeholder="np. 300" value=data[2].tariff.price2021.second)
+        .year2020-wrapper 
+          p(class="tariff-wrapper-title") 2020 r.
+          div
+            label Średnia 
+            input(id="priceC12b2020Avr" type="text" placeholder="np. 300" value=data[2].tariff.price2022.avr)
+          div
+            label I strefa 
+            input(id="priceC12b2020First" type="text" placeholder="np. 300" value=data[2].tariff.price2022.first)
+          div
+            label II strefa
+            input(id="priceC12b2020Second" type="text" placeholder="np. 300" value=data[2].tariff.price2022.second) 
+    .extra-tariff-wrapper
+      p(class="tariff-wrapper-title-main") C21         
+      div
+        label 2022r.
+        input(id="priceC212022" type="text" placeholder="np. 300" value=data[3].tariff.price2022)
+      div
+        label 2021r.
+        input(id="priceC212021" type="text" placeholder="np. 300" value=data[3].tariff.price2021)
+      div
+        label 2020r.
+        input(id="priceC212020" type="text" placeholder="np. 300" value=data[3].tariff.price2020)    
+    div(class="intakec11c21")
       label(for="wear") Zużycie: 
       input(id="wear" type="text" placeholder="np. 18.3")
+    div(class="intakec12ac12b")
+      div
+        label(for="wear") Zużycie I strefa: 
+        input(id="wear" type="text" placeholder="np. 7.3")
+      div
+        label(for="wear") Zużycie II strefa: 
+        input(id="wear" type="text" placeholder="np. 18.3")
+      div
+        label(for="wear") Zużycie suma: 
+        input(id="wear" type="text" placeholder="wyliczę")
       
     div
       label(for="proposePrice") Twoja propozycja: 
