--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -133,5 +133,13 @@
         }
 
 
+
+    }
+
+    .tariffc12a-wrapper,
+    .tariffc12b-wrapper,
+    .tariffc21-wrapper,
+    .intakec12ac12b {
+        display: none;
     }
 }
