work on ofertomat v 1.2  -> build js fn to calc

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -139,7 +139,8 @@
     .tariffc12a-wrapper,
     .tariffc12b-wrapper,
     .tariffc21-wrapper,
-    .intakec12ac12b {
+    .intakec12ac12b,
+    .propositionc12ac12b {
         display: none;
     }
 }
