--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -127,6 +127,7 @@
 .wrapper .tariffc12a-wrapper,
 .wrapper .tariffc12b-wrapper,
 .wrapper .tariffc21-wrapper,
-.wrapper .intakec12ac12b {
+.wrapper .intakec12ac12b,
+.wrapper .propositionc12ac12b {
   display: none;
 }
