c12a avr works ok

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -163,4 +163,15 @@
         }
 
     }
+
+    #onePriceForAll {
+        width: 30px;
+        height: 30px;
+    }
+
+    .label-for-one-price {
+        vertical-align: bottom;
+        color: midnightblue;
+        font-weight: bolder;
+    }
 }
