--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -150,3 +150,14 @@
   text-align: center;
   font-weight: bolder;
 }
+
+.wrapper #onePriceForAll {
+  width: 30px;
+  height: 30px;
+}
+
+.wrapper .label-for-one-price {
+  vertical-align: bottom;
+  color: midnightblue;
+  font-weight: bolder;
+}
