v 1.2 ready to push

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -174,4 +174,11 @@
         color: midnightblue;
         font-weight: bolder;
     }
+
+    #clearInputsBtn {
+        display: block;
+        margin: 5px auto;
+    }
+
+
 }
