--- a/views/panel.pug
+++ b/views/panel.pug
@@ -123,7 +123,7 @@ block content
       label(for="wear") Zużycie: 
       input(id="wear" type="text" placeholder="np. 18.3")
     div(class="havePricesc12ac12b")
-      p Klient ma cenę:
+      p(class="tariff-wrapper-title") Klient ma cenę:
       .have-prices-divs-wrapper   
         div
           label(for="havePriceAvr") Średnia: 
@@ -135,7 +135,7 @@ block content
           label(for="havePriceSecond") II strefa: 
           input(id="havePriceSecond" class="set-to-zero" type="text" value=0)
     div(class="intakec12ac12b")
-      p Zużycie:
+      p(class="tariff-wrapper-title") Zużycie:
       .intake-divs-wrapper   
         div
           label(for="wearFirst") I strefa: 
