--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -326,7 +326,7 @@ body .wrapper .change-price-panel {
   border-radius: 5px;
   text-align: center;
   display: none;
-  width: 600px;
+  width: 700px;
   transition: .5s;
 }
 
@@ -362,7 +362,14 @@ body .wrapper .tariff-wrapper-title {
 
 body .wrapper .wrap-all-in-tariff {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+}
+
+body .wrapper .wrap-all-in-tariff .year2022-wrapper,
+body .wrapper .wrap-all-in-tariff .year2021-wrapper,
+body .wrapper .wrap-all-in-tariff .year2020-wrapper {
+  border: 2px solid black;
+  padding: 5px;
 }
 
 body .wrapper .tariffc12a-wrapper,
