class tariff full ready to work - use for c11 c12a c12b

--- a/views/panel.pug
+++ b/views/panel.pug
@@ -269,6 +269,7 @@ block content
   script(src="/javascripts/smallparts/calcc12a.js")
   script(src="/javascripts/smallparts/calcc12b.js")
   script(src="/javascripts/smallparts/setToZero.js")
+  script(src="/javascripts/tariffEngine.js") 
     
 
    
