--- a/views/panel.pug
+++ b/views/panel.pug
@@ -9,7 +9,7 @@ block content
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       label(for="tariff") Grupa taryfowa:  
-      select(id="tariff")
+      select(id="tariff" class="note-remover")
         option(value="C11") C11
         option(value="C12a") C12a
         option(value="C12b") C12b                       
